# agora

.github/workflows/: backend.yml
contract/.github/workflows/: test.yml
server/: Cargo.toml
server/src/config/: cors.rs  security.rs
server/src/routes/: mod.rs
