[package]
name = "agora-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"

# Async runtime
tokio = { version = "1.37", features = ["full"] }

# Middleware
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "set-header"] }
pin-project = "1.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Env handling (recommended)
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
